All done, ready to start selling

--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
             <h2>Aurelia</h2>
             <img src="images/sidebar.jpg" alt="About Aurelia" class="sidebar-image">
             <p><strong>About Us: </strong> A company that equips businesses with premium softwares.</p>
-            <p><strong>Meet Us: </strong> Upbeat Recreation Center, Lekki Phase 1, Lagos, Nigeria.</p>
-            <p><strong>Contact Us: </strong>+1 (318) 250-1538 Hannah, <br /> +1 (608) 474 3491 James</p>
+            <p><strong>Meet Us: </strong>  Upbeat Recreation Center, Lekki Phase 1, Lagos, Nigeria.</p>
+            <p><strong>Chat Us: </strong> +1 (318) 250-1538 Hannah, <br /> +1 (608) 474 3491 James</p>
+            <p><strong>Mail Us: </strong>  aurelia-apps@outlook.com</p>
             <div class="map-container">
                 <iframe 
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d17195.98579967043!2d3.4168244299192256!3d6.439209029824158!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103bf452da3bd44b%3A0x47331fb41adc9d28!2sLekki%20Phase%201%2C%20Lekki%20106104%2C%20Lagos!5e0!3m2!1sen!2sng!4v1746862852798!5m2!1sen!2sng" 
