Updated phone numbers

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <img src="images/sidebar.jpg" alt="About Aurelia" class="sidebar-image">
             <p><strong>About Us: </strong> A company that equips businesses with premium softwares.</p>
             <p><strong>Meet Us: </strong>  Upbeat Recreation Center, Lekki Phase 1, Lagos, Nigeria.</p>
-            <p><strong>Chat Us: </strong> +1 (318) 250-1538 Hannah, <br /> +1 (608) 474 3491 James</p>
+            <p><strong>Chat Us: </strong> +1 (318) 250-1538 Hannah, <br /> +1 (608) 474-3491 Mirabel, <br /> +1 (575) 642-9482 James</p>
             <p><strong>Mail Us: </strong>  aurelia-apps@outlook.com</p>
             <div class="map-container">
                 <iframe 
