--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@
     <div id="welcome-modal" class="modal">
         <div class="modal-content welcome-modal-content">
             <span class="close-btn">&times;</span>
-            <h2>Welcome to Aurelia! 🎉</h2>
+            <h2>🚀 Aurelia Has Just Launched! 🚀</h2>
             <div class="welcome-body">
-                <p>Enjoy unbeatable deals on premium digital products that are tailored to boost your business and creative projects. Don't miss out—grab your exclusive discounts now!</p>
+                <p>The ultimate software suite for serious businesses — powerful, lifetime-owned tools to build, sell, and scale.</p>
             </div>
             <div class="welcome-footer">
                 <button id="dismiss-btn" class="cta-btn">Get Started</button>
