Added social icons

--- a/index.html
+++ b/index.html
@@ -127,6 +127,25 @@
         <p id="no-products-message">We don't have that 🙃 — you can <a href="https://wa.me/+13182501538?text=Hi%20Aurelia,%20I%20couldn't%20find%20what%20I%20was%20looking%20for.%20Can%20you%20help?" target="_blank" style="color: var(--primary); text-decoration: underline;">request</a> what you need.</p>
     </section>
 
+
+        <!-- Social Media Section -->
+    <section class="social-section">
+        <div class="social-container">
+            <a href="https://www.tiktok.com/@aureliaapps" target="_blank" class="social-icon tiktok">
+                <i class="fab fa-tiktok"></i>
+            </a>
+            <a href="https://www.instagram.com/aureliaapps/" target="_blank" class="social-icon instagram">
+                <i class="fab fa-instagram"></i>
+            </a>
+            <a href="https://x.com/AureliaApps" target="_blank" class="social-icon x">
+                <svg viewBox="0 0 24 24" class="x-icon">
+                    <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
+                </svg>
+            </a>
+        </div>
+    </section>
+
+
     <!-- Statistics Section -->
     <section class="stats-section">
         <p>&copy; <script>document.write(new Date().getFullYear())</script> Aurelia</p>
