Made new changes to the UI

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         <div class="sidebar-content">
             <h2>Aurelia</h2>
             <img src="images/sidebar.jpg" alt="About Aurelia" class="sidebar-image">
-            <p><strong>About Us: </strong> A company that equips businesses with premium softwares.</p>
+            <p><strong>About Us: </strong> A startup company that equips businesses with premium softwares.</p>
             <p><strong>Meet Us: </strong>  Upbeat Recreation Center, Lekki Phase 1, Lagos, Nigeria.</p>
-            <p><strong>Chat Us: </strong> +1 (318) 250-1538 Hannah, <br /> +1 (608) 474-3491 Mirabel, <br /> +1 (575) 642-9482 James</p>
+            <p><strong>Chat Us: </strong> +1 (318) 250-1538 Hannah, <br /> +1 (608) 474-3491 Mirabel, <br /> +234 811 961-7887 Leonard</p>
             <p><strong>Mail Us: </strong>  aurelia-apps@outlook.com</p>
             <div class="map-container">
                 <iframe 
@@ -53,7 +53,7 @@
                     referrerpolicy="no-referrer-when-downgrade">
                 </iframe>
             </div>
-            <p><strong>Why Us: </strong> We're not just another software vendor—we're your strategic edge. While others sell bloated platforms with monthly fees and feature restrictions, we deliver lean, powerful systems built for lifetime ownership. Our solutions are engineered to solve real business problems: cutting costs, accelerating sales, and giving you full control without ongoing overhead. No lock-ins. No compromises. Just results you can measure—and own.</p>
+            <p><strong>Why Us: </strong> We're not just another software vendor — we're your strategic edge. While others sell bloated platforms with monthly fees and feature restrictions, we deliver lean, powerful systems built for lifetime ownership. Our solutions are engineered to solve real business problems: cutting costs, accelerating sales, and giving you full control without ongoing overhead. No lock-ins. No compromises. Just results you can measure—and own.</p>
             <div class="sidebar-features">
                 <div class="feature">
                     <i class="fas fa-certificate"></i>
@@ -124,7 +124,7 @@
             <h2>Hot Deals 🔥</h2>
         </div>
         <div id="products" class="products-container"></div>
-        <p id="no-products-message">We don't have that 🙃 — you can <a href="https://wa.me/+13182501538?text=Hi%20Aurelia,%20I%20couldn't%20find%20what%20I%20was%20looking%20for.%20Can%20you%20help?" target="_blank" style="color: var(--primary); text-decoration: underline;">request</a> what you need.</p>
+        <p id="no-products-message">We don't have that 🙃 — but you can <a href="https://wa.me/+13182501538?text=Hi%20Aurelia,%20I%20couldn't%20find%20what%20I%20was%20looking%20for.%20Can%20you%20help?" target="_blank" style="color: var(--primary); text-decoration: underline;">request</a> what you need.</p>
     </section>
 
 
@@ -148,7 +148,7 @@
 
     <!-- Statistics Section -->
     <section class="stats-section">
-        <p>&copy; <script>document.write(new Date().getFullYear())</script> Aurelia</p>
+        <p>&copy; <script>document.write(new Date().getFullYear())</script> Aurelia Apps</p>
     </section>
 
     <!-- Product Modal -->
