Added footer section

--- a/index.html
+++ b/index.html
@@ -149,11 +149,18 @@
     </section>
 
 
-    <!-- Statistics Section -->
-    <section class="stats-section">
-        <p>&copy; <script>document.write(new Date().getFullYear())</script> Aurelia Apps</p>
-    </section>
+    
 
+    <!-- Statistics Section -->
+<section class="stats-section">
+    <div class="trust-message">
+        <p>Aurelia is a <strong>Paystack&reg;</strong> verified company delivering premium digital solutions with lifetime ownership—no subscriptions, no hidden fees. While competitors lock you into monthly plans, we offer <strong>unrestricted access</strong> from day one. Our rigorously tested tools are trusted by businesses worldwide, from Lagos to Los Angeles, because we cut costs, accelerate growth, and scale effortlessly. Every purchase includes <strong>48-hour installation</strong> and direct 24/7 support—no chatbots, just real humans. We eliminate vendor lock-in, unpredictable expenses, and fine-print surprises.</p>
+    </div>
+    <p>&copy; <script>document.write(new Date().getFullYear())</script> Aurelia Apps</p>
+</section>
+
+
+    
     <!-- Product Modal -->
     <div id="product-modal" class="modal">
         <div class="modal-content">
