made new chnages to UI

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Premium digital products and software solutions">
     <meta name="keywords" content="digital, buy virtual assets, product, premium, deals, discounts">
     <meta name="author" content="Aurelia">
-    <title>Aurelia | Premium Digital Products</title>
+    <title>Aurelia | Premium Business Softwares</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="icon" href="./images/logo.png" type="image/png">
@@ -154,7 +154,7 @@
     <!-- Statistics Section -->
 <section class="stats-section">
     <div class="trust-message">
-        <p>Aurelia is a <strong>Paystack&reg;</strong> verified company delivering premium digital solutions with lifetime ownership—no subscriptions, no hidden fees. While competitors lock you into monthly plans, we offer <strong>unrestricted access</strong> from day one. Our rigorously tested tools are trusted by businesses worldwide, from Lagos to Los Angeles, because we cut costs, accelerate growth, and scale effortlessly. Every purchase includes <strong>48-hour installation</strong> and direct 24/7 support—no chatbots, just real humans. We eliminate vendor lock-in, unpredictable expenses, and fine-print surprises.</p>
+        <p>Aurelia is a <strong>Paystack&reg;</strong> verified company delivering premium business softwares with lifetime ownership — no subscriptions, no hidden fees. While competitors lock you into monthly plans, we offer <strong>unrestricted access</strong> from day one. Our rigorously tested tools are trusted by businesses worldwide, from Lagos, Nigeria to Los Angeles, United States, because we cut costs, accelerate growth, and scale effortlessly. Every purchase includes <strong>48-hour installation</strong> and direct 24/7 support — no chatbots, just real humans. We eliminate vendor lock-in, unpredictable expenses, and fine-print surprises.</p>
     </div>
     <p>&copy; <script>document.write(new Date().getFullYear())</script> Aurelia Apps</p>
 </section>
