added confetti and chime audio

--- a/index.html
+++ b/index.html
@@ -306,5 +306,9 @@
 
     <script src="products.js"></script>
     <script src="script.js"></script>
+    <!-- Add confetti library -->
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
+    <!-- Audio element for chime sound -->
+    <audio id="confetti-sound" src="sounds/chime.mp3" preload="auto"></audio>
 </body>
 </html>
