--- a/index.html
+++ b/index.html
@@ -73,9 +73,11 @@
 
     <!-- Hero Section -->
     <section class="hero">
-          <div class="hero-bg hero-bg-1"></div>
-          <div class="hero-bg hero-bg-2"></div>
-          <div class="hero-bg hero-bg-3"></div>
+        <video autoplay muted loop playsinline class="hero-video">
+        <source src="videos/hero-background.mp4" type="video/mp4">
+        <!-- Fallback image if video doesn't load -->
+        <img src="images/background1.jpg" alt="Fallback background" class="hero-fallback">
+    </video>  
         <div class="countdown-container">
             <h3>Flash Sale Ends In:</h3>
             <div class="countdown">
