made corrective and other changes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Premium digital products and software solutions">
-    <meta name="keywords" content="digital, buy virtual assets, product, premium, deals, discounts">
+    <meta name="keywords" content="software, digital, buy virtual assets, product, premium, deals, discounts">
     <meta name="author" content="Aurelia">
     <title>Aurelia | Premium Business Softwares</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -100,7 +100,7 @@
             </div>
         </div>
         <div class="hero-content">
-            <h1 class="hero-title">Discover The World Of Aurelia</h1>
+            <h1 class="hero-title">Discover The World Of <span style="color: var(--secondary);">Aurelia</span></h1>
             <p class="hero-subtitle">Unbeatable flash deals on premium software — one-time payment, lifetime ownership</p>
             <div class="search-bar glow">
                 <input type="text" id="search" placeholder="Search for products...">
