added powered by section

--- a/index.html
+++ b/index.html
@@ -161,6 +161,16 @@
     <p>&copy; <script>document.write(new Date().getFullYear())</script> Aurelia Apps</p>
 </section>
 
+<!-- Add this right after the copyright line in the stats-section -->
+<div class="powered-by">
+    <p>Powered by</p>
+    <div class="powered-by-logos">
+        <img src="images/paystack.png" alt="Paystack">
+        <img src="images/netlify.png" alt="Netlify">
+        <img src="images/github.png" alt="GitHub">
+    </div>
+</div>
+
 
     
     <!-- Product Modal -->
