fixed column to row in sidebar

--- a/index.html
+++ b/index.html
@@ -54,20 +54,26 @@
                 </iframe>
             </div>
             <p><strong>Why Us: </strong> We're not just another software vendor — we're your strategic edge. While others sell bloated platforms with monthly fees and feature restrictions, we deliver lean, powerful systems built for lifetime ownership. Our solutions are engineered to solve real business problems: cutting costs, accelerating sales, and giving you full control without ongoing overhead. No lock-ins. No compromises. Just results you can measure—and own.</p>
+            
             <div class="sidebar-features">
-                <div class="feature">
-                    <i class="fas fa-certificate"></i>
-                    <span>Premium Quality</span>
-                </div>
-                <div class="feature">
-                    <i class="fas fa-infinity"></i>
-                    <span>Lifetime Use</span>
-                </div>
-                <div class="feature">
-                    <i class="fas fa-shield-alt"></i>
-                    <span>Secure Access</span>
-                </div>
+    <div class="feature-scroll-container">
+        <div class="feature-row">
+            <div class="feature">
+                <i class="fas fa-certificate"></i>
+                <span>Premium</span>
             </div>
+            <div class="feature">
+                <i class="fas fa-infinity"></i>
+                <span>Lifetime</span>
+            </div>
+            <div class="feature">
+                <i class="fas fa-shield-alt"></i>
+                <span>Secure</span>
+            </div>
+        </div>
+    </div>
+</div>
+            
         </div>
     </aside>
 
