--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <img src="images/sidebar.jpg" alt="About Aurelia" class="sidebar-image">
             <p><strong>About Us: </strong> A startup company that equips businesses with premium softwares.</p>
             <p><strong>Meet Us: </strong>  Upbeat Recreation Center, Lekki Phase 1, Lagos, Nigeria.</p>
-            <p><strong>Chat Us: </strong> +1 (318) 250-1538 Hannah, <br /> +1 (608) 474-3491 Mirabel, <br /> +234 811 961-7887 Leonard</p>
+            <p><strong>Chat Us: </strong> +234 810 032-2782 Hahn, <br /> +234 811 961-7887 Leonard</p>
             
             <div class="map-container">
                 <iframe 
@@ -289,7 +289,7 @@
                 <p>Aurelia reserves the right to update or change these Terms and Conditions at any time without prior notice. Continued use of the platform and purchases made after such changes constitutes acceptance of the new terms.</p>
 
                 <h3>10. Conclusion</h3>
-                <p>For questions or clarification about these terms, please contact Hannah: +1 (318) 250-1538</p>
+                <p>For questions or clarification about these terms, please contact Hannah: +234 810 032 2782</p>
                 <p>By making a purchase, you agree to our Terms and Conditions.</p>
             </div>
             <div class="terms-footer">
