--- a/product-details.html
+++ b/product-details.html
@@ -169,7 +169,7 @@
                     </div>
                 </div>
             </div>
-
+            <a href="terms.html" class="trust-message-main">By completing a purchase, you agree to be bound by our Terms & Conditions</a>
             <!-- Final CTA with urgency elements -->
             <div class="final-cta">
                 <a id="buy-now-btn" class="cta-btn">
